<resources>
    <string name="item_settings">设置</string>
    <string name="item_info">简介</string>

    <string name="button1">八卦</string>
    <string name="button2">百家姓</string>
    <string name="button3">六爻</string>
    <string name="button4">测试</string>

    <string name="home_page">墨风斋</string>
    <string name="page_1">百家姓</string>
    <string name="page_2">六爻</string>
    <string name="page_3">简介</string>
    <string name="page_4">排盘</string>
    <string name="page_5">八卦</string>
    <string name="page_6">第六页</string>

    <string name="click_this_button">点击这个按钮</string>
    <string name="hint">这里显示结果</string>
    <string name="result">结果为：\n\t\t\t</string>

    <string name="aa">
        先天定终身，看五行成败为本。\n
        后天补乾坤，用姓名趋吉为法。
    </string>

    <string name="info">\n
<b>姓名学起名课题简论</b>\n\n
\t\t\t\t命运是人类永恒的话题，它的神秘性和不可抗拒性，千百年来圣人凡人都为之感叹。
        而易学是我们祖先以一种独特的思维方式，对命运本质的理解和应用，所以易学她才能用来预测命运和改善命运。\n
        \t\t\t\t现在的人们对命运的普遍理解，是性格决定命运，或者命先天注定，运后天人为等，其说法比较抽象，那么这是为什么呢?\n
\t\t\t\t也就是说命运的形成机制是什么？人，到底有没有命运，命运有没有规律，能不能预测是不是注定不变的，命运可以改变不，怎么改变等等\n
\t\t\t\t命运的形成机制。   命运就是环境对我不断作用的结果，也是命对我的确定，运是环境的变化。
        也就是说命就是自己作为一个独立先天个体所秉承的环境因素，运就是环境变化,是自己周围的环境变化的进程模式。
        环境的变化是有规律的，寒暑交替，月圆月缺，日出日落，都有严格的周期节律。因此人所处的环境也是有规律的变化，
        季节交替，草木枯荣，一切都在有条不紊的变化中。与此对应我命的先天秉承环境被不断的激发或仰制，从而形成我一生的命运轨迹，这就是命运。\n\t\t\t\t
那么再看看性格，性格决定命运，因为性格属于命的一种因素，所以对命运有影响。但不是全面性的，
        性格只是人对环境变化的习惯反应。真正决定命运的是环境，也就是常说的时势造英雄。
        从性格这个角度来说真实的命运是环境和性格共同决定的。性格本身无所谓好坏，任何一种人的性格都有可能成功，
        关键是看这个性格特征是不是和所在的环境默契，性格和环境有顺有逆，顺则生逆则亡，也是命运形成的根本。\n\t\t\t\t
易学体系之所以能预测命运，就是因为她是对环境变化的模拟。预测就是在这个模式中定位一个具体的自己，
        然后进行推演来模拟环境变化对自己命运的影响，从中找出自己的命运轨迹。依据人生一世草木一秋的说法，
        人的命运和草木一样根据环境去变化。命运的先天基因确定，八字，
        八字不同的人所感受的环境状态就不同这种不同随着一个人的出生而永远定格，成为一个人的特有因素。
        但是这个因素却确定了命运中的喜忌，也确定了适合什么样的环境生活，因此八字相同的人因先天后天的环境不同命运也会出现不同。\n\t\t\t\t
八字作为人的命运因素，决定一个人的命运好坏，这是先天注定的无法改变，也是命运的定数，例如；
        一颗种子它本身喜欢湿润的，却被带到沙漠里，那么它发芽的机会几乎没有了，也就是说先天的种子因素被后天环境作用了。
        这就是人们常说的命运中的变数，也就是说命运是可以改变的。。。。。。。
        姓名和风水（姓名和环境的变化是后天可以改变的）这就是姓名学和风水环境学的作用和应用意义。\n\t\t\t\t
再看看姓名，姓名就是人为的后天因素，每个人都会有自己的姓名符号，一样会伴随你的一生，
        所以对后天的影响很大，那么八字代表先天，姓名则是后天，先天后天的结合才符合易学的思维模式，
        这就是姓名的重要意义就在于此。\n\t\t\t\t
起名的结构易理，依据易医想通的原理，结合中医的五行理论和对草木的五行划分原则为依据，
        那么在姓名学表现为汉字就是草药，名字就是配方。由此可以理解为姓名的目的不在于预测命运而是调整和改变人的命运，
        就是用汉字的五行来调理人先天因素的五行病处，从而达到补救命运的用途。姓名之所以如此重要。\n\t\t\t\t
在易医想通为基础的阴阳五行体系，易和医的应用范围不同，中医是治疗身体的疾病，易学是调理命运之病，
        同理草药可配方治病，那么字药配方可以治命。那么天下无草不是药，字也是无字不是药，
        都是依据五行属性作用于人，只有识别他的五行属性方可入药为方，中医为人的健康做到救治和调理，
        易学同样也是为人的命运做到救治和调理。（记住药和病是一体的）不看命理就断定名字的好坏是不可取的。\n\t\t\t\t
姓名是一种文字符号，文字可以起到意识从面的作用，姓名也一样，它和自己是一个整体，属于自己的一种环境因素，
        社会的环境因素，有无形作用力的社会环境。虽然表现缓慢，但是对社会环境的作用很大而且是持久的，
        姓名会陪伴人的一生所以不可忽视的。如果不是依据专业五行知识来起名，那么随便起的名字会和命运吻合，
        命运好的时候起个好的坏的时候就会起个差的。\n\t\t\t\t
姓名对人影响最大的因素，就是性格，性格和姓名的特点是分不开的。因为都有的特性是代表无形的，
        尤其是在性格形成的过程中会产生非常大的影响。所以对刚出生的宝宝来说，起一个好的名字是非常重要的。\n\t\t\t\t
起名基本原则；起名一定要慎重，因为它不像衣服一样随时可以换，姓名学是易学的一个分支，
        其主要作用是补救先天的不足。如；宝宝一出生其先天就已确定，不可以改变，那么命运的缺陷怎么办？
        只有靠后天的环境因素来改善。其中姓名就是一个很重要的因素，起一个好的名字是一个很专业的事情，
        需要对命理的喜忌做出准确的判断和掌握姓名的起名原理（先天定终身，看五行成败。后天补乾坤，用姓名趋吉。）
        具体方法咨询墨风斋。\n\n\t\t\t\tQQ:2744588388\n\t\t\t\t手机:13465361050\n\n
<b>名字将影响人的一生，希望大家认真对待。</b>\n\n
不用冷僻字，如果上司或者重要人物不认识这个冷僻字，恐怕对自己不是什么好事情。
        也不能太俗气，这涉及到个人的文化功底。名字发音要雅致，注意姓的五行和名字的五行搭配。
起名方法简说，生肖起名法；不符合易学的常变原则。纳音起名法；经不起推敲，作为民俗还可以，作为起名就不行了。\n\t\t\t\t
        八字起名法；比较符合起名，缺陷是没法二元定位。
姓名学的真正伪法五格剖像作为娱乐可以，对于起名，几乎没有一点实用用处。其理论片面，吉凶根据笔画确定形式错误，
        选字没有考虑汉字的基本特点，最差的就是把数字1----81分开确定吉凶，完全违背易理。
        只有同名的人甚至不同名只要笔画相同那么它的五格就会一样，不符合易学特点。证明此法只能作为游戏娱乐而已。
        与姓名的真正作用相悖不能当真。\n\n
<u>实例改名（附1）\n
成人改名；基本信息，\n
姓氏孙，性别女，出生于1982年10月28日6时0分。\n（阳历）
八字为壬戌年，庚戌月，\n甲申日，丁卯时，（日空午未）\n
父1960年4月母1960年3月。\n所得先天卦象为，震为雷变地雷复。
运用二元定位法看先天的五行喜忌。代表自身思想的爻位旺相有助无伤，起名时可以不考虑，
        再看代表自身的爻位，申虽生但是有克，为有伤不利健康，并且临官，官代表婚姻因此不利婚姻，
        事实卦主33岁依旧单身，身体健康不是很好。因此起名的重点就是拟补命运中的不利，
        因此卦主名字要用土通关再用金来旺自身。以此卦主的姓名最佳五行为土金组合，这是（先天看五行成败）。
        然后再用后天补乾坤的方法把所需土金五行的汉字以及笔画加上完成一个完整起名的确定。</u>
\n\n
    </string>

</resources>
